syntax = "proto3";


option java_multiple_files = true;
option java_package = "reservation_booking1";
option java_outer_classname = "BookingService_Impl";

package maths;

// Interface exported by the server.
service Booking {

	rpc createGuest(stream PersonalData) returns (stream RegisterResponse ) {}

	rpc bookReservation(ReservationRequest) returns (stream ReservationResponse ) {}

  rpc makePayment(PaymentRequest) returns (PaymentResponse) {}

}

message PersonalData {
	string name = 1;
	int32 pone = 2;
	string email = 3;
}

message RegisterResponse {
	string id  = 1;
	string message = 2;
}

message ReservationRequest {
	int32 guestId = 1;
	string paymentConfirmation = 2;
	string startDate = 3;
	string endDate = 4;
}


message ReservationResponse {
	int32 status = 1;
	string message = 2;
}



message PaymentRequest {
	int32 guestId = 1;
	int32 reservationId = 3;

  enum Method{

  	MOBILE_MONEY =0;
  	CARD=1;
  	RTS=2;
  	PAYPAL=3;
  }
	Method paymentMethod = 4;
}


message PaymentResponse {
	int32 status = 1;
	string message = 2;
}

